# ziptrigo-apps

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  WARP.md  docker-compose.yml  manage.py  pyproject.toml  pytest_e2e.ini
admin/: __init__.py  aws.py  db.py  email.py  environment.py  lint.py  openapi.py  pip.py  qrcode.py  server.py  test.py  utils.py  web_app.py
admin/requirements/: requirements-app-qr_code.in  requirements-app-qr_code.txt  requirements-app-user.in  requirements-app-users.in  requirements-app-users.txt  requirements-base.in  requirements-base.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
common/: .env.example  __init__.py  environment.py
common/settings/: base.py
config/: __init__.py  settings.py
docs/: quickref.md  setup.md
qr_code/: .env.example  Dockerfile  README.md  WARP.md
qr_code/admin/: email.py  test.py
qr_code/admin/requirements/: requirements.in
qr_code/config/: settings.py  urls.py  wsgi.py
qr_code/docs/: testing.md
qr_code/qr_code/: __init__.py  apps.py  checks.py  serializers.py  tokens.py  urls.py
qr_code/qr_code/api/: __init__.py  auth_new.py  qrcode_new.py  redirect.py  router.py
qr_code/qr_code/migrations/: 0001_initial.py
qr_code/qr_code/models/: __init__.py  credit_transaction.py  qrcode.py
qr_code/qr_code/schemas/: __init__.py  auth.py  qrcode.py
qr_code/qr_code/services/: __init__.py  email_service.py  (+2 more)
qr_code/tests/: conftest.py  test_api.py  test_auth.py  test_credits.py  test_email_confirmation.py  test_models.py  test_password_reset_email.py  test_services.py  test_setup_integration.py  test_setup_unit.py
requirements/: base.txt  qr_code.txt  user.txt  users.txt
shared/auth_client/: pyproject.toml
shared/utils/: pyproject.toml
src/qr_code/: admin.py
src/user/: admin.py  api.py  apps.py  tokens.py
tests/: conftest.py  factories.py  test_email_confirmation.py  test_password_reset_email.py  test_services.py  test_setup_integration.py
tests/api/: test_auth_login_api.py  test_roles_permissions_api.py
tests/common/: test_environment.py
tests/unit/: test_jwt.py  test_user_model.py
tests_e2e/: conftest.py  test_users.py
user/: Dockerfile  WARP.md  manage.py
user-service/: Dockerfile  README.md
user-service/config/: asgi.py  settings.py  urls.py
user-service/tests/: factories.py
user-service/users/: api.py
user/config/: settings.py  urls.py
user/tests/: conftest.py
users/: .env.example  Dockerfile  README.md  WARP.md
users/config/: settings.py  urls.py  wsgi.py
users/tests/: conftest.py  test_auth.py
users/users/: admin.py  api.py  apps.py  tokens.py  validators.py  views.py
(+123 files in other folders)
