[project]
name = 'ziptrigo-apps'
version = '0.1.0'
description = 'ZipTrigo Django applications monorepo'
requires-python = '>=3.13'
dependencies = [
    'boto3>=1.34,<2.0',
    'django-cors-headers>=4.3,<5.0',
    'django-jazzmin>=3.0,<4.0',
    'django-ninja-extra>=0.30,<1.0',
    'django-ninja-jwt>=5.4,<6.0',
    'django-ninja>=1.5,<2.0',
    'django-ses>=4.0,<5.0',
    'django>=6.0,<6.1',
    'jinja2>=3.1,<4.0',
    'pydantic[email]>=2.12,<3.0',
    'pyjwt[crypto]>=2.10,<3.0',
    'python-dotenv>=1.0,<2.0',
    'whitenoise>=6.11,<7.0',
]

[dependency-groups]
users = []
qr_code = [
    'pillow>=12.0,<13.0',
    'segno>=1.6,<2.0',
]
dev = [
    'boto3-stubs[s3,ses]',
    'django-stubs',
    'factory-boy',
    'faker',
    'mypy',
    'playwright',
    'pytest',
    'pytest-cov',
    'pytest-django',
    'pytest-playwright',
    'pyyaml',
    'requests',
    'ruff',
    'segno>=1.6,<2.0',
    'pillow>=12.0,<13.0',
    'textual-searchable-selectionlist',
    'typer',
    'typer-invoke',
]

[tool.ruff]
line-length = 100
target-version = 'py313'
exclude = [
    '.venv*',
    'venv*',
    'migrations',
    'build',
    'dist',
    'docs',
]

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']
extend-ignore = ['E266', 'E501', 'E701', 'F811']

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config.settings'
python_files = ['tests.py', 'test_*.py', '*_tests.py', '*_test.py']
python_classes = ['Test*']
python_functions = ['test_*']
testpaths = ['tests']
addopts = [
  '--strict-markers',
  '--reuse-db',
  '--no-migrations',
  '-v',
  '--tb=short',
]
markers = [
  'unit: Unit tests',
  'integration: Integration tests',
  'slow: Slow running tests',
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = 'htmlcov'

[tool.mypy]
python_version = '3.13'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ['mypy_django_plugin.main']
exclude = [
    'migrations',
    '.venv.*',
    'venv.*',
]

[tool.django-stubs]
django_settings_module = 'config.settings'

[[tool.mypy.overrides]]
module = [
    'dotenv',
    'mypy_boto3_ses',
    'ninja_jwt.*',
    'rest_framework.*',
    'segno',
    'segno.*',
    'textual_searchable_selectionlist.*',
]
ignore_missing_imports = true

[tool.typer-invoke]
modules = [
    'admin.aws',
    'admin.email',
    'admin.lint',
    'admin.openapi',
    'admin.pip',
    'admin.qrcode',
    'admin.server',
    'admin.test',
]
